--- a/src/main.css
+++ b/src/main.css
@@ -6,11 +6,15 @@
   font-weight: 500;
 
   /* Colors */
-  /* --light-blue: #1da1f2; */
+  --light-purple: #312b79;
 }
 
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+}
+
+body {
+  background-color: var(--light-purple);
 }
