--- a/src/components/Task/task.css
+++ b/src/components/Task/task.css
@@ -1,10 +1,9 @@
-.task-container {
+.container-task {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
   padding: 0.5rem;
   margin: 1rem 0;
-  border-radius: 12px;
-  border: solid 1px yellow;
+  border-radius: 8px;
+  border: solid 1px var(--dark-pink);
 }
