--- a/src/main.css
+++ b/src/main.css
@@ -2,11 +2,13 @@
 
 :root {
   /* Fonts */
-  font-family: "Roboto", sans-serif;
-  font-weight: 500;
+  --font-roboto: "Roboto", sans-serif;
 
   /* Colors */
-  --light-purple: #716cac;
+  --dark-blue: #151237;
+  --dark-pink: #c01b8c;
+  --white: #ffffff;
+  --green: #249f43;
 }
 
 * {
@@ -15,6 +17,30 @@
   box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
-  background-color: var(--light-purple);
+  font-family: var(--font-roboto);
+  font-weight: 400;
+  background-color: var(--dark-blue);
+  color: var(--white);
+  line-height: 1;
+}
+
+/*******************************/
+/* GENERAL REUSABLE COMPONENTS */
+/*******************************/
+
+.btn {
+  padding: 0.6rem 1.2rem;
+  text-decoration: none;
+  font-weight: 600;
+  border-radius: 8px;
+  border: none;
+  cursor: pointer;
+  background-color: var(--dark-pink);
+  color: var(--white);
+  transition: all 0.3s;
 }
