--- a/src/components/Tasks/tasks.css
+++ b/src/components/Tasks/tasks.css
@@ -1,7 +1,7 @@
-.container-homepage {
+.container-list {
+  margin-top: 2rem;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  margin-top: 2rem;
+  align-items: center;
 }
