--- a/src/main.css
+++ b/src/main.css
@@ -7,6 +7,7 @@
   /* Colors */
   --dark-blue: #151237;
   --dark-pink: #c01b8c;
+  --light-pink: #da4aad;
   --white: #ffffff;
   --green: #249f43;
 }
