add hover state to btn class

--- a/src/main.css
+++ b/src/main.css
@@ -109,6 +109,10 @@ input:invalid[focused="true"] ~ span {
   transition: all 0.3s;
 }
 
+.btn:hover {
+  background-color: var(--light-pink);
+}
+
 .font-bold {
   font-weight: 700;
 }
